--- a/bmi-calculator/Dockerfile
+++ b/bmi-calculator/Dockerfile
@@ -1,9 +1,14 @@
+# Base image is Python
 FROM python
 
+# Copy all the files
 COPY . .
 
+# Install all needed requirements
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python", "app.py"]
+# You need to specify Python file we're running
+ENTRYPOINT ["python", $APPLICATION_FILE]
 
-EXPOSE 5000
+# You need to specify port where application is listening
+EXPOSE $APPLICATION_PORT
