Migrate to Spark 3.0

--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -1,6 +1,4 @@
-FROM spark-py:2.4.5
+FROM spark-py:3.0.0
 
-RUN mkdir /app
-COPY aggregation.py /app/
-ADD https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.11/2.4.5/spark-sql-kafka-0-10_2.11-2.4.5.jar /app/
-ADD https://repo1.maven.org/maven2/org/apache/kafka/kafka-clients/2.0.0/kafka-clients-2.0.0.jar /app/
+COPY aggregation.py /opt/spark/work-dir/
+COPY *.jar /opt/spark/work-dir/
